# DemoGTest

./: .gitignore  CMakeLists.txt
Application/: CMakeLists.txt
Application/src/: main.cpp
Library_Tests/: CMakeLists.txt
Library_Tests/src/: test_Calculator.cpp
